deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-script
  labels:
    name: ai-script
    env: production
